Update updater to new paper api